# Plugin-Licensor-Available-Source-API-Methods

./: .gitignore  README.md  api_code_workspace.code-workspace
create_license/: Cargo.toml  README.md
create_license/src/: main.rs
create_license/src/my_modules/: db.rs  mod.rs
create_license/src/my_modules/crypto/: aes.rs  mod.rs  rsa.rs  sha.rs
create_license/src/my_modules/networking/input/: mod.rs
create_license/src/my_modules/networking/input/decrypted/: batch_get.rs  batch_write.rs  create_license_item.rs  get_license_item.rs  mod.rs  new.rs  prepare_to_license.rs  update_license_data.rs  validate.rs  verify_signature.rs
create_license/src/my_modules/networking/input/encrypted/: decrypt.rs  mod.rs  new.rs
create_license/src/my_modules/networking/input/plugin/: mod.rs
create_license/src/my_modules/networking/input/request/: mod.rs
create_license/src/my_modules/networking/output/: mod.rs
create_license/src/my_modules/networking/output/error/: into.rs  mod.rs  new.rs  respond.rs
create_license/src/my_modules/networking/output/license/: mod.rs
create_license/src/my_modules/networking/output/response/: mod.rs
create_license/src/my_modules/utils/: batch_get_utils.rs  maps.rs  mod.rs  to_base64.rs  to_json.rs  utils.rs
